--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TaskCrafts</title>
-    <link href="{{ url_for('static', filename='/styles.css') }}" rel="stylesheet">
+    <title>My Flask App</title>
 </head>
 <body>
-    <a href="/signin" class="sign-in-btn">Sign In</a>
-    {% block content %}{% endblock %}
+    <div class="navbar">
+        <a href="/">Home</a> | <a href="/about">About</a>
+    </div>
+    <div class="content">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
