--- a/board/templates/pages/about.html
+++ b/board/templates/pages/about.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>About Us</h1>
-    <p>This is the about page of our Flask app.</p>
+    <p>This is the about page content.</p>
 {% endblock %}
