--- a/board/templates/pages/home.html
+++ b/board/templates/pages/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>Welcome to the Home Page</h1>
-    <p>This is the home page of our Flask app.</p>
+    <p>This is the home page content.</p>
 {% endblock %}
