--- a/board/templates/pages/home.html
+++ b/board/templates/pages/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+     
     <style>
         /* CSS for styling */
         body {
@@ -126,7 +127,8 @@
             </div>
         </div>
     </div>
-    <a class="btn btn-primary signin-btn" href="#">Sign In</a>
+    <a class="btn btn-primary signin-btn" href="signin.html">Sign In</a>
+
     <h1 class="taxcraft" style="font-weight: bold; font-size: 60px;">TaxCraft</h1>
 
 
@@ -153,7 +155,7 @@
             font-weight: bold;
             font-size: 60px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            animation: shadow-pulse 1.2s infinite alternate;
+            animation: shadow-pulse 1s infinite alternate;
         }
 
         @keyframes shadow-pulse {
@@ -165,6 +167,6 @@
             }
         }
     </style>
- 
+    <form id="loginForm" onsubmit="return validateForm()" action="home.html">
 </body>
 </html>
