--- a/board/templates/pages/login.html
+++ b/board/templates/pages/login.html
@@ -86,7 +86,7 @@ h2 {
     </div>
     <button type="submit" class="btn">Login</button>
   </form>
-  <a href="home.html" class="back-btn">Back</a>
+  <a href="index.html" class="back-btn">Back</a>
 </div>
 
 <script>
